[gd_scene load_steps=5 format=3 uid="uid://dy1u0kyg27oxg"]

[ext_resource type="Script" uid="uid://bgf54nmh6vcxi" path="res://menus/settings_menu/settings_menu.gd" id="1_twvox"]
[ext_resource type="Texture2D" uid="uid://dj4v11dqwbjov" path="res://themes/ui_textures/smaller_checked.png" id="2_i06k8"]
[ext_resource type="PackedScene" uid="uid://b076010rnvrtp" path="res://combat/arena/components/battle_speed_controller/battle_speed_controller.tscn" id="2_r2f7a"]
[ext_resource type="Texture2D" uid="uid://dbh2q7ddm2qev" path="res://themes/ui_textures/smaller_unchecked.png" id="3_vfbxb"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_twvox")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.101961, 0.121569, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.5
offset_top = -358.0
offset_right = 277.5
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenButton" type="CheckBox" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_direction = 2
layout_mode = 2
theme_override_icons/checked = ExtResource("2_i06k8")
theme_override_icons/unchecked = ExtResource("3_vfbxb")
alignment = 1
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Battle Speed"

[node name="BattleSpeedButtonGroup" parent="CanvasLayer/VBoxContainer/HBoxContainer" instance=ExtResource("2_r2f7a")]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="MasterVolumeContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MasterVolumeLabel" type="Label" parent="CanvasLayer/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="CanvasLayer/VBoxContainer/MasterVolumeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="SFXVolumeContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="CanvasLayer/VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="CanvasLayer/VBoxContainer/SFXVolumeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 2

[node name="MusicVolumeContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="CanvasLayer/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="CanvasLayer/VBoxContainer/MusicVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ExitButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
offset_right = 200.0
offset_bottom = 200.0
text = "Back"

[connection signal="toggled" from="CanvasLayer/VBoxContainer/HBoxContainer2/FullscreenButton" to="." method="_on_full_screen_button_toggled"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/SFXVolumeContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
